--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,12 @@ jobs:
         go-version: '1.23.4'
       id: go  
     
+    - name: Install golang-migrate
+      run: | 
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-arm64.tar.gz | tar xvz
+        sudo mv migrate.linux-arm64 /usr/local/bin/
+        which migrate
+      
     - name: Run migrations
       run: make migrateup
 
