--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Install golang-migrate
       run: | 
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-arm64.tar.gz | tar xvz
-        sudo mv migrate.linux-arm64 /usr/local/bin/
+        sudo mv migrate /usr/local/bin/migrate
         which migrate
       
     - name: Run migrations
