--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
     
     - name: Install golang-migrate
       run: | 
-        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate-4.18.1.zip
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-arm64.tar.gz | tar xvz
+        chmod +x migrate
         sudo mv migrate /usr/local/bin/migrate
         which migrate
       
