--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12
+        image: postgres:12-alpine
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
@@ -42,7 +42,6 @@ jobs:
     - name: Install golang-migrate
       run: | 
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-arm64.tar.gz | tar xvz
-        chmod +x migrate
         sudo mv migrate /usr/local/bin/migrate
         which migrate
       
