--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
         with:
-          version: "1.32"
+          version: "1.31.5"
         id: install
 
       - name: Configure AWS credentials
@@ -47,8 +47,11 @@ jobs:
           REPOSITORY: simplebank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t latest.
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
           docker push $REGISTRY/$REPOSITORY
+      
+      - name: Update kubeconfig
+        run: aws eks --region eu-north-1 update-kubeconfig --name simple-bank
       
       - name: Deploy image to Amazon EKS
         run: |
